--- a/Task2/Task2.html
+++ b/Task2/Task2.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>To-Do List</title>
+  <link rel="stylesheet" type="text/css" href="Task2style.css">
+</head>
+<body>
+  <div class="container">
+    <h1>To-Do List</h1>
+    <div class="input-section">
+      <input type="text" id="taskInput" placeholder="Add a task">
+      <button id="addButton">Add Task</button>
+    </div>
+    <ul id="taskList"></ul>
+  </div>
+
+  <script src="Task2script.js"></script>
+</body>
+</html>
 
